--- a/index.html
+++ b/index.html
@@ -297,17 +297,17 @@
   <div class="projects">
     <div class="project">
       <h3>To-Do List</h3>
-      <img src="C:\Users\sahil\Desktop\NM PORTFOLIO\TO DO LIST.jpeg" alt="TO-DO LIST" class="project-img">
+      <img src="images\TO DO LIST.jpeg" alt="TO-DO LIST" class="project-img">
       <p>A To-Do List web app built using HTML, CSS, and JavaScript.</p>
     </div>
     <div class="project">
       <h3>Class Timetable</h3>
-      <img src="C:\Users\sahil\Desktop\NM PORTFOLIO\TIMETABLE.jpeg" alt="CLASS TIMETABLE" class="project-img">
+      <img src="images\TIMETABLE.jpeg" alt="CLASS TIMETABLE" class="project-img">
       <p>Organized timetable built using HTML table elements.</p>
     </div>
     <div class="project">
       <h3>Portfolio Webpage</h3>
-      <img src="C:\Users\sahil\Desktop\NM PORTFOLIO\PORTFOLIO.jpeg" alt="PORTFOLIO" class="project-img">
+      <img src="images\PORTFOLIO.jpeg" alt="PORTFOLIO" class="project-img">
       <p>A personal portfolio built with HTML, CSS, and JavaScript.</p>
     </div>
   </div>
@@ -412,3 +412,4 @@ document.querySelectorAll(".project-img").forEach(img=>{
 </script>
 </body>
 </html>
+
