--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
       <h1>Hello👋 I'm Sahil Jain</h1>
       <p>Web Developer | Designer | Learner</p>
     </div>
-    <img src="C:\Users\sahil\Pictures\SAHIL PROFILE.jpg" alt="Sahil Jain" class="profile-pic">
+    <img src="images\SAHIL PROFILE.jpeg" alt="Sahil Jain" class="profile-pic">
   </div>
 </header>
 
@@ -412,4 +412,5 @@ document.querySelectorAll(".project-img").forEach(img=>{
 </script>
 </body>
 </html>
+
 
