--- a/index.html
+++ b/index.html
@@ -343,15 +343,15 @@ document.querySelectorAll(".project-img").forEach(img=>{
  <!-- SOCIAL LINKS -->
 <div style="text-align:center; margin-top:20px;">
 
-  <!-- LinkedIn -->
-  <a href="https://www.linkedin.com/in/sahil-jain-8127b1300/" 
-     target="_blank" 
-     style="color:#0A66C2; font-weight:bold; text-decoration:none; font-size:1.1rem; margin-right:20px;">
-    <img src="C:\Users\sahil\Downloads\linkedin.png" 
-         alt="LinkedIn" 
-         style="width:30px; height:auto; vertical-align:middle; margin-right:8px;">
-    Connect with me on LinkedIn
-  </a>
+<!-- LinkedIn -->
+<a href="https://www.linkedin.com/in/sahil-jain-8127b1300/" 
+   target="_blank" 
+   style="color:#0A66C2; font-weight:bold; text-decoration:none; font-size:1.1rem; margin-right:20px;">
+  <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" 
+       alt="LinkedIn" 
+       style="width:30px; height:auto; vertical-align:middle; margin-right:8px;">
+  Connect with me on LinkedIn
+</a>
 
   <!-- GitHub -->
   <a href="https://github.com/sahiljain006" 
@@ -412,6 +412,7 @@ document.querySelectorAll(".project-img").forEach(img=>{
 </script>
 </body>
 </html>
+
 
 
 
