--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@ document.querySelectorAll(".project-img").forEach(img=>{
 <a href="https://www.linkedin.com/in/sahil-jain-8127b1300/" 
    target="_blank" 
    style="color:#0A66C2; font-weight:bold; text-decoration:none; font-size:1.1rem; margin-right:20px;">
-  <img src="https://www.flaticon.com/free-icon/linkedin_4494497" 
+  <img src="https://cdn-icons-png.flaticon.com/128/3670/3670167.png" 
        alt="LinkedIn" 
        style="width:30px; height:auto; vertical-align:middle; margin-right:8px;">
   Connect with me on LinkedIn
@@ -412,6 +412,7 @@ document.querySelectorAll(".project-img").forEach(img=>{
 </script>
 </body>
 </html>
+
 
 
 
